Revision history for Perl module Lingua::Strfname.

0.11
      - Added the "configure_requires", "build_requires", and "recommends"
        parameters to Build.PL.

0.10  Mon Oct  6 20:44:45 2003
      - Added "%g" template for a separate "generation" name part. This Forces
        more arguments to be passed to strfname, which, if you used extra
        names in the past, breaks backwards compatability. Hence the bump to
        version 0.10.

0.03  Tue Aug 26 02:03:06 2003
      - Reorganized disstribution to be more like other Perl modules.
      - Added POD testing.
      - Switched to Module::Build

0.02  Sat Dec 29 17:54:03 2001
      - Corrected some inconsistencies in the documentation. Otherwise unchanged.

0.01  Sat Dec 29 16:38:08 2001
      - Initial Public Release.
