@@ -114,9 +114,14 @@ Here are the supported formats:
   %4 Extra Name 4 Initial
   %5 Extra Name 5 Initial
 
-=head1 BUGS
+=head1 SUPPORT
 
-Please send bug reports to <bug-lingua-strfname@rt.cpan.org>.
+This module is stored in an open repository at the following address:
+
+L<https://svn.kineticode.com/Lingua-Strfname/trunk/>
+
+Patches against SVN::Notify are welcome. Please send bug reports to
+<bug-lingua-strfname@rt.cpan.org>.
 
 =head1 AUTHOR
 
@@ -125,7 +130,7 @@ David Lowe.
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (c) 2000-2004, David Wheeler. All Rights Reserved.
+Copyright (c) 2000-2008, David Wheeler. All Rights Reserved.
 
 This module is free software; you can redistribute it and/or modify it under the
 same terms as Perl itself.
